[package]
name = "meio-connect"
version = "0.92.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/meio"
homepage = "https://github.com/rillrate/meio"
documentation = "https://docs.rs/meio-connect/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["async", "actors"]
categories = ["concurrency"]
description = "Set of connectors for MEIO framework"

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.50"
derive_more = "0.99.16"
futures = "0.3.16"
headers = "0.3.4"
# TODO: And this when possible (
hyper = { version = "0.14.11", features = ["full"] }
log = "0.4.14"
meio = { version = "0.92.0", path = "../meio" }
meio-protocol = { version = "0.92.0", path = "../meio-protocol" }
serde = { version = "1.0.126", features = ["derive"] }
serde_qs = "0.8.4"
slab = "0.4.3"
thiserror = "1.0.26"
tokio = "1.9.0"
tokio-tungstenite = "0.15.0"
tungstenite = { version = "0.14.0", default-features = false }
