[package]
name = "meio-extra"
version = "0.97.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2021"
repository = "https://github.com/rillrate/meio"
homepage = "https://github.com/rillrate/meio"
documentation = "https://docs.rs/meio-connect/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["async", "actors"]
categories = ["concurrency"]
description = "Examples of extending meio"

[dependencies]
anyhow = "1.0.45"
async-trait = "0.1.51"
meio = { version = "0.97.0", path = "../meio" }
