[package]
name = "meio-protocol"
version = "0.89.4"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rate-technology/meio"
homepage = "https://github.com/rate-technology/meio"
documentation = "https://docs.rs/meio-protocol/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["async", "actors"]
categories = ["concurrency"]
description = "Basic protocol traits of MEIO framework"

[dependencies]
anyhow = "1.0.41"
serde = "1.0.126"
