[package]
name = "meio-protocol"
version = "0.93.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/meio"
homepage = "https://github.com/rillrate/meio"
documentation = "https://docs.rs/meio-protocol/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["async", "actors"]
categories = ["concurrency"]
description = "Basic protocol traits of MEIO framework"

[dependencies]
anyhow = "1.0.42"
serde = "1.0.126"
