[package]
name = "meio"
version = "0.84.0"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rate-technology/meio"
homepage = "https://github.com/rate-technology/meio"
documentation = "https://docs.rs/meio/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["async", "actors"]
categories = ["concurrency"]
description = "A compact actors framework for the async epoch in Rust & Tokio"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.48"
derive_more = "0.99.11"
futures = "0.3.13"
futures-timer = { version = "3.0.2", optional = true }
log = "0.4.14"
thiserror = "1.0.24"
tokio = { version = "1.3.0", features = ["full"], optional = true }
tokio-util = { version = "0.6.4", features = ["full"], optional = true }
uuid = { version = "0.8.2", features = ["v4"] }
wasm-bindgen-futures = { version = "0.4.21", optional = true }

[dev-dependencies]
env_logger = "0.8.3"
hyper = "0.14.4"

[features]
default = ["tokio", "tokio-util"]
wasm = [
    "wasm-bindgen-futures",
    "futures-timer/wasm-bindgen",
    "uuid/wasm-bindgen",
]
