[package]
name = "meio"
version = "0.89.2"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rate-technology/meio"
homepage = "https://github.com/rate-technology/meio"
documentation = "https://docs.rs/meio/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["async", "actors"]
categories = ["concurrency"]
description = "A compact actors framework for the async epoch in Rust & Tokio"

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1.50"
derive_more = "0.99.14"
futures = "0.3.15"
futures-timer = { version = "3.0.2", optional = true }
log = "0.4.14"
thiserror = "1.0.25"
tokio = { version = "1.6.1", features = ["full"], optional = true }
tokio-util = { version = "0.6.7", features = ["full"], optional = true }
uuid = { version = "0.8.2", features = ["v4"] }
wasm-bindgen-futures = { version = "0.4.24", optional = true }

[dev-dependencies]
env_logger = "0.8.4"
hyper = "0.14.9"

[features]
default = ["tokio", "tokio-util"]
wasm = [
    "wasm-bindgen-futures",
    "futures-timer/wasm-bindgen",
    "uuid/wasm-bindgen",
]
