[package]
name = "meio"
version = "0.93.5"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/meio"
homepage = "https://github.com/rillrate/meio"
documentation = "https://docs.rs/meio/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["async", "actors"]
categories = ["concurrency"]
description = "A compact actors framework for the async epoch in Rust & Tokio"

[dependencies]
anyhow = "1.0.43"
async-trait = "0.1.51"
derive_more = "0.99.16"
futures = "0.3.17"
futures-timer = { version = "3.0.2", optional = true }
log = "0.4.14"
thiserror = "1.0.28"
tokio = { version = "1.11.0", features = ["full"], optional = true }
tokio-util = { version = "0.6.7", features = ["full"], optional = true }
uuid = { version = "0.8.2", features = ["v4"] }
wasm-bindgen-futures = { version = "0.4.26", optional = true }

[dev-dependencies]
env_logger = "0.9.0"
hyper = "0.14.12"

[features]
default = ["tokio", "tokio-util"]
wasm = [
    "wasm-bindgen-futures",
    "futures-timer/wasm-bindgen",
    "uuid/wasm-bindgen",
]
